# CMake_GTest

./: .gitignore  README.md
demo/: CMakeLists.txt  README.md  autobuild.sh  leakcheck.sh
demo/include/: foo.hpp
demo/src/: foo.cpp
demo/unittest/: ut.cpp
